--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 100px;
 }
 
 .half-width {
@@ -36,4 +37,28 @@ section {
 .top-banner {
     background-image: url("images/top-banner.png");
     background-repeat: no-repeat;
+}
+
+.second-width {
+    width: 50%;
+    padding: 2%;
+}
+
+.second-width img {
+    width: 90%;
+}
+
+.download-resume {
+    text-decoration: none;
+    background-image: linear-gradient(rgb(241, 74, 88), rgb(233, 196, 128));
+    padding: 10px 40px;
+    color: white;
+    font-weight: 700;
+    border-radius: 5px;
+}
+
+.mid-banner {
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 }
